--- a/frontend.html
+++ b/frontend.html
@@ -3,83 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News Headlines</title>
+    <title>headlines - get all headlines in one place</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        body {
+            background-color: #e6f2ff;
+        }
+        .news-board {
+            transition: all 0.3s ease-in-out;
+        }
+        .news-board:hover {
+            transform: scale(1.03);
+        }
+        .custom-scrollbar {
+            scrollbar-width: thin;
+            scrollbar-color: rgba(156, 163, 175, 0.5) transparent;
+        }
         .custom-scrollbar::-webkit-scrollbar {
-            height: 8px;
-            width: 8px;
+            width: 6px;
         }
         .custom-scrollbar::-webkit-scrollbar-track {
-            background: #f1f1f1;
+            background: transparent;
         }
         .custom-scrollbar::-webkit-scrollbar-thumb {
-            background: #888;
-            border-radius: 4px;
+            background-color: rgba(156, 163, 175, 0.5);
+            border-radius: 20px;
+            border: transparent;
         }
-        .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-            background: #555;
+        .headline-link:hover {
+            text-decoration: underline;
         }
-        .loading {
-            background: url('loading.svg') no-repeat center center;
-            background-size: contain;
-        }
-        .disabled {
-            background-color: #aaa;
-            cursor: not-allowed;
+        .github-link:hover svg {
+            fill: #2563eb; /* blue-600 */
         }
     </style>
 </head>
-<body class="bg-gray-100">
-<header class="bg-green-800 text-white shadow-md">
-    <div class="container mx-auto py-4 px-6 flex justify-between items-center">
-        <h1 class="text-3xl font-bold">headlines - get all headlines in one place</h1>
-        <a href="https://github.com/shaharia-lab/headlines" target="_blank" class="text-white underline">GitHub Repo</a>
-    </div>
-</header>
+<body class="min-h-screen p-8">
+<div class="container mx-auto">
+    <h1 class="text-4xl font-bold mb-8 text-center text-blue-800">headlines - get all headlines in one place</h1>
 
-<nav class="bg-white shadow-md py-4">
-    <div class="container mx-auto">
-        <p class="text-gray-700">Welcome to headlines! Get the latest news from multiple sources all in one place. Toggle sources to customize your feed.</p>
-    </div>
-</nav>
+    <div class="flex flex-wrap -mx-4">
+        <div class="w-full md:w-1/3 px-4 mb-8">
+            <h2 class="text-2xl font-semibold mb-4 text-blue-700">News Sources</h2>
+            <div id="boardToggles" class="space-y-2 mb-4"></div>
+            <div class="mt-8 p-4 bg-white rounded-lg shadow-md">
+                <a href="https://github.com/shaharia-lab/headlines" target="_blank" rel="noopener noreferrer" class="github-link flex items-center text-gray-700 hover:text-blue-600 transition-colors duration-300">
+                    <svg class="w-6 h-6 mr-2" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                    </svg>
+                    <span><strong>GitHub:</strong> shaharia-lab/headlines-go</span>
+                </a>
+            </div>
+        </div>
 
-<main class="container mx-auto p-6">
-    <div class="flex justify-end mb-4">
-        <label class="flex items-center">
-            <input type="checkbox" id="liveRefreshToggle" class="mr-2">
-            Live Refresh
-        </label>
+        <div class="w-full md:w-2/3 px-4">
+            <div class="bg-white rounded-lg shadow-lg p-6">
+                <div class="flex justify-between items-center mb-4">
+                    <h2 id="selectedSourceName" class="text-2xl font-semibold text-blue-700">Select a News Source</h2>
+                    <div class="flex items-center">
+                        <label for="liveRefreshToggle" class="mr-2">Live Refresh</label>
+                        <input type="checkbox" id="liveRefreshToggle" class="mr-4">
+                        <div id="countdown" class="text-gray-500"></div>
+                    </div>
+                </div>
+                <p id="selectedSourceDates" class="mb-4 text-gray-600">
+                    <i class="far fa-calendar-alt mr-2"></i>
+                    <span id="currentDate"></span>
+                </p>
+                <ul id="headlinesList" class="space-y-2"></ul>
+                <button
+                        onclick="showModal()"
+                        class="mt-6 bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600 transition-colors duration-300"
+                >
+                    View All Headlines
+                </button>
+            </div>
+        </div>
     </div>
-    <div id="countdown" class="text-right text-gray-500 mb-6"></div>
-    <div id="boardToggles" class="mb-6 bg-white p-4 rounded-lg shadow-md"></div>
-    <div id="newsBoards" class="news-boards grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
-</main>
+</div>
 
-<footer class="bg-gray-200 py-4 mt-6">
-    <div class="container mx-auto text-center text-gray-700">
-        &copy; 2024 headlines. All rights reserved.
+<div id="modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
+    <div class="bg-white p-8 rounded-lg max-w-2xl w-full">
+        <h2 class="text-2xl font-bold mb-4">All Headlines</h2>
+        <div id="allHeadlines" class="mb-4 max-h-96 overflow-y-auto"></div>
+        <button
+                onclick="hideModal()"
+                class="bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600 transition-colors duration-300"
+        >
+            Close
+        </button>
     </div>
-</footer>
+</div>
 
 <script>
-    const boardColors = [
-        'bg-blue-100', 'bg-green-100', 'bg-yellow-100', 'bg-red-100',
-        'bg-indigo-100', 'bg-purple-100', 'bg-pink-100', 'bg-teal-100'
-    ];
-
     let newsData = [];
+    let selectedSource = null;
     let liveRefresh = true;
     let refreshInterval;
-
-    document.getElementById('liveRefreshToggle').addEventListener('change', (e) => {
-        liveRefresh = e.target.checked;
-        if (liveRefresh) {
-            startRefreshTimer();
-        } else {
-            clearInterval(refreshInterval);
-        }
-    });
 
     async function fetchNews() {
         try {
@@ -88,144 +108,98 @@
                 throw new Error('Network response was not ok');
             }
             newsData = await response.json();
-            displayNews(newsData);
             updateBoardToggles(newsData);
+            if (selectedSource === null && newsData.length > 0) {
+                selectSource(0);
+            } else if (selectedSource !== null) {
+                displayHeadlines(newsData[selectedSource]);
+            }
         } catch (error) {
             console.error('Failed to fetch news data:', error);
-            document.getElementById('newsBoards').innerHTML = '<p class="text-red-500 text-center w-full col-span-full">Failed to load news. Please try again later.</p>';
-        } finally {
-            document.getElementById('newsBoards').classList.remove('loading');
+            document.getElementById('headlinesList').innerHTML = '<p class="text-red-500">Failed to load news. Please try again later.</p>';
         }
-    }
-
-    function displayNews(data) {
-        const newsBoardsContainer = document.getElementById('newsBoards');
-        newsBoardsContainer.innerHTML = '';
-
-        data.forEach((sourceData, index) => {
-            const board = createNewsBoard(sourceData, index);
-            newsBoardsContainer.appendChild(board);
-        });
-    }
-
-    function createNewsBoard(sourceData, index) {
-        const board = document.createElement('div');
-        const colorClass = boardColors[index % boardColors.length];
-        board.className = `${colorClass} rounded-lg shadow-lg p-6 flex flex-col h-[600px]`;
-        board.id = `board-${index}`;
-
-        const sourceHeader = createSourceHeader(sourceData.source);
-        const homepageLink = createHomepageLink(sourceData.source.homepage);
-
-        board.appendChild(sourceHeader);
-        board.appendChild(homepageLink);
-
-        const newsList = document.createElement('ul');
-        newsList.className = 'space-y-4 overflow-y-auto custom-scrollbar flex-grow';
-
-        if (sourceData.headlines && sourceData.headlines.length > 0) {
-            sourceData.headlines.forEach(article => {
-                const listItem = createNewsItem(article);
-                newsList.appendChild(listItem);
-            });
-        } else {
-            const noHeadlines = document.createElement('li');
-            noHeadlines.className = 'text-gray-500 text-center py-4';
-            noHeadlines.textContent = 'No headlines found';
-            newsList.appendChild(noHeadlines);
-        }
-
-        board.appendChild(newsList);
-        return board;
-    }
-
-    function createSourceHeader(source) {
-        const sourceHeader = document.createElement('div');
-        sourceHeader.className = 'flex items-center mb-4 pb-2 border-b';
-
-        const sourceLogo = document.createElement('img');
-        sourceLogo.src = source.logo;
-        sourceLogo.alt = `${source.name} logo`;
-        sourceLogo.className = 'w-8 h-8 mr-2 rounded';
-
-        const sourceTitle = document.createElement('h2');
-        sourceTitle.className = 'text-xl font-bold text-gray-800';
-        sourceTitle.textContent = source.name;
-
-        sourceHeader.appendChild(sourceLogo);
-        sourceHeader.appendChild(sourceTitle);
-
-        return sourceHeader;
-    }
-
-    function createHomepageLink(homepage) {
-        const homepageLink = document.createElement('a');
-        homepageLink.href = homepage;
-        homepageLink.className = 'text-sm text-blue-600 hover:text-blue-800 block mb-4';
-        homepageLink.textContent = 'Visit Homepage';
-        homepageLink.target = '_blank';
-        homepageLink.rel = 'noopener noreferrer';
-        return homepageLink;
-    }
-
-    function createNewsItem(article) {
-        const listItem = document.createElement('li');
-        listItem.className = 'news-item bg-white bg-opacity-60 rounded-md shadow-sm overflow-hidden';
-
-        const link = document.createElement('a');
-        link.href = article.url || '#';
-        link.className = 'block p-3 hover:bg-gray-100 transition-colors duration-200';
-        link.target = '_blank';
-        link.rel = 'noopener noreferrer';
-
-        const title = document.createElement('h3');
-        title.className = 'text-md font-semibold text-gray-800';
-        title.textContent = article.title;
-
-        link.appendChild(title);
-        listItem.appendChild(link);
-        return listItem;
     }
 
     function updateBoardToggles(data) {
         const togglesContainer = document.getElementById('boardToggles');
-        togglesContainer.innerHTML = '<h2 class="text-lg font-semibold mb-2">Toggle News Sources:</h2>';
-        const togglesWrapper = document.createElement('div');
-        togglesWrapper.className = 'flex flex-wrap gap-2';
+        togglesContainer.innerHTML = '';
 
         data.forEach((sourceData, index) => {
             const toggle = document.createElement('button');
-            toggle.className = `px-3 py-1 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors ${isBoardHidden(index) ? 'disabled' : ''}`;
-            toggle.textContent = sourceData.source.name;
-            toggle.onclick = () => toggleBoard(index, toggle);
-            togglesWrapper.appendChild(toggle);
+            toggle.className = `w-full text-left px-4 py-3 rounded-lg shadow-md transition-colors duration-300 ${
+                selectedSource === index
+                    ? 'bg-blue-500 text-white'
+                    : 'bg-white text-gray-800 hover:bg-blue-100'
+            }`;
+            toggle.innerHTML = `
+                    <span class="flex items-center">
+                        <i class="fas fa-newspaper mr-3"></i>
+                        <span class="font-semibold">${sourceData.source.name}</span>
+                    </span>
+                `;
+            toggle.onclick = () => selectSource(index);
+            togglesContainer.appendChild(toggle);
+        });
+    }
+
+    function selectSource(index) {
+        selectedSource = index;
+        updateBoardToggles(newsData);
+        displayHeadlines(newsData[index]);
+    }
+
+    function displayHeadlines(sourceData) {
+        const headlinesList = document.getElementById('headlinesList');
+        const selectedSourceName = document.getElementById('selectedSourceName');
+        const currentDate = document.getElementById('currentDate');
+
+        selectedSourceName.textContent = `${sourceData.source.name} Headlines`;
+        currentDate.textContent = new Date().toLocaleDateString();
+        headlinesList.innerHTML = '';
+
+        sourceData.headlines.forEach(article => {
+            const li = document.createElement('li');
+            li.className = 'p-2 bg-white rounded-lg shadow transition-all duration-300';
+            li.innerHTML = `
+                    <a href="${article.url}" target="_blank" rel="noopener noreferrer" class="headline-link block text-blue-600 hover:text-blue-800">
+                        ${article.title}
+                    </a>
+                `;
+            headlinesList.appendChild(li);
+        });
+    }
+
+    function showModal() {
+        const modal = document.getElementById('modal');
+        const allHeadlines = document.getElementById('allHeadlines');
+        allHeadlines.innerHTML = '';
+
+        newsData.forEach(sourceData => {
+            const sourceHeadlines = document.createElement('div');
+            sourceHeadlines.innerHTML = `<h3 class="font-bold mt-4">${sourceData.source.name}</h3>`;
+            const ul = document.createElement('ul');
+            sourceData.headlines.forEach(article => {
+                const li = document.createElement('li');
+                li.innerHTML = `
+                        <a href="${article.url}" target="_blank" rel="noopener noreferrer" class="headline-link text-blue-600 hover:text-blue-800">
+                            ${article.title}
+                        </a>
+                    `;
+                ul.appendChild(li);
+            });
+            sourceHeadlines.appendChild(ul);
+            allHeadlines.appendChild(sourceHeadlines);
         });
 
-        togglesContainer.appendChild(togglesWrapper);
+        modal.classList.remove('hidden');
     }
 
-    function toggleBoard(index, button) {
-        const board = document.getElementById(`board-${index}`);
-        if (board) {
-            board.classList.toggle('hidden');
-            button.classList.toggle('disabled');
-            saveBoardState(index, !board.classList.contains('hidden'));
-        }
-    }
-
-    function isBoardHidden(index) {
-        const boardState = JSON.parse(localStorage.getItem('boardState')) || {};
-        return !boardState[`board-${index}`];
-    }
-
-    function saveBoardState(index, isVisible) {
-        const boardState = JSON.parse(localStorage.getItem('boardState')) || {};
-        boardState[`board-${index}`] = isVisible;
-        localStorage.setItem('boardState', JSON.stringify(boardState));
+    function hideModal() {
+        document.getElementById('modal').classList.add('hidden');
     }
 
     function startRefreshTimer() {
-        let countdown = 10;
+        let countdown = 60;
         const countdownElement = document.getElementById('countdown');
         countdownElement.textContent = `Refreshing in ${countdown}s`;
 
@@ -236,17 +210,26 @@
 
             if (countdown === 0) {
                 fetchNews();
-                countdown = 10;
+                countdown = 60;
             }
         }, 1000);
     }
 
-    document.addEventListener('DOMContentLoaded', () => {
-        document.getElementById('liveRefreshToggle').checked = true;
-        fetchNews();
-        startRefreshTimer();
+    document.getElementById('liveRefreshToggle').addEventListener('change', (e) => {
+        liveRefresh = e.target.checked;
+        if (liveRefresh) {
+            startRefreshTimer();
+        } else {
+            clearInterval(refreshInterval);
+            document.getElementById('countdown').textContent = '';
+        }
     });
 
+    document.addEventListener('DOMContentLoaded', () => {
+        fetchNews();
+        document.getElementById('liveRefreshToggle').checked = true;
+        startRefreshTimer();
+    });
 </script>
 </body>
 </html>
